Se corrigio un metodo del respositorio adaptador del producto