@@ -1,22 +1,21 @@
 package mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.dao;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Repository;
 
 import mx.com.santander.hexagonalmodularmaven.product.model.entity.Product;
-import mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.JpaProductRepository;
+import mx.com.santander.hexagonalmodularmaven.product.adapter.jpa.SpringProductRepository;
 import mx.com.santander.hexagonalmodularmaven.product.adapter.mapper.MapperProduct;
 import mx.com.santander.hexagonalmodularmaven.product.port.dao.DaoProduct;
 
 @Repository
 public class JpaProductAdapterDao implements DaoProduct{
     
-    private final JpaProductRepository jpaProductRepository;
+    private final SpringProductRepository jpaProductRepository;
     private final MapperProduct mapperProduct;
 
-    public JpaProductAdapterDao(JpaProductRepository jpaProductRepository, MapperProduct mapperProduct){
+    public JpaProductAdapterDao(SpringProductRepository jpaProductRepository, MapperProduct mapperProduct){
         this.jpaProductRepository = jpaProductRepository;
         this.mapperProduct = mapperProduct;
     }
@@ -33,7 +32,7 @@ public class JpaProductAdapterDao implements DaoProduct{
         return jpaProductRepository.findAll()
         .stream()
         .map(mapperProduct::toDomain)
-        .collect(Collectors.toList());
+        .toList();
     }
 
 }
